<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputCourses.InputCourseActivity">

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/courses_view"
      android:layout_width="386dp"
      android:layout_height="430dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.478"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.048" />

  <Spinner
      android:id="@+id/input_year"
      android:layout_width="126dp"
      android:layout_height="48dp"
      android:layout_marginBottom="76dp"
      app:layout_constraintBottom_toTopOf="@+id/add_course_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.217"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/input_subject"
      android:layout_width="71dp"
      android:layout_height="38dp"
      android:layout_marginBottom="20dp"
      android:ems="5"
      android:hint="Subject"
      android:inputType="text"
      android:textSize="@dimen/list_text_size"
      app:layout_constraintBottom_toTopOf="@+id/add_course_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.085"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/input_course_number"
      android:layout_width="71dp"
      android:layout_height="38dp"
      android:layout_marginBottom="20dp"
      android:ems="5"
      android:hint="Course #"
      android:inputType="text"
      android:textSize="@dimen/list_text_size"
      app:layout_constraintBottom_toTopOf="@+id/add_course_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.382"
      app:layout_constraintStart_toStartOf="parent" />

  <Spinner
      android:id="@+id/input_qtr"
      android:layout_width="126dp"
      android:layout_height="48dp"
      android:layout_marginBottom="76dp"
      app:layout_constraintBottom_toTopOf="@+id/add_course_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.778"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/add_course_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:onClick="onAddCourseClicked"
      android:text="Add Course"
      app:layout_constraintBottom_toTopOf="@+id/done_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/done_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:onClick="onDoneClicked"
      android:text="Done"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Spinner
      android:id="@+id/input_size"
      android:layout_width="150dp"
      android:layout_height="38dp"
      android:layout_marginBottom="20dp"
      app:layout_constraintBottom_toTopOf="@+id/add_course_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.896"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>