<resources>
    <string name="app_name">BirdsOfAFeather</string>
    <string name="title_activity_name">NameActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_your_name">Confirm your name:</string>
    <string name="autofilled_name">Michael Bay</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="photo_url_hint">Enter your photo URL</string>
    <string name="choose_a_profile_photo">Choose a profile photo</string>
    <string name="default_photo_url">https://commons.wikimedia.org/wiki/File:Default_pfp.jpg</string>
    <string-array name="quarters_array">
        <item>SSS</item>
        <item>SS2</item>
        <item>SS1</item>
        <item>SP</item>
        <item>WI</item>
        <item>FA</item>
    </string-array>
    <string-array name="years_array">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string-array name="sizes_array">
        <item>Gigantic</item>
        <item>Huge</item>
        <item>Large</item>
        <item>Medium</item>
        <item>Small</item>
        <item>Tiny</item>
    </string-array>
    <string-array name="priorities_array">
        <item>common classes</item>
        <item>recent</item>
        <item>small classes</item>
    </string-array>
    <string name="confirm_mocked_student">Confirm mocked student</string>
    <string name="hint_student_csv">Enter name,photo url, and classes as csv</string>
    <string name="start_searching">Start Searching</string>
    <string name="stop_searching">Stop Searching</string>
    <string name="mock_students">Mock Students</string>
    <string name="go_back">Go Back</string>
    <string name="wave_on">wave on</string>
    <string name="wave_off">wave off</string>
    <string name="wave_sent">\"Wave sent!\"</string>
    <string name="student_photo">Student Photo</string>
</resources>